[package]
name = "spin-trigger-wasi-messaging"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
anyhow = "1.0"
tracing = { workspace = true }
spin-app = { path = "../app" }
spin-core = { path = "../core" }
spin-trigger = { path = "../trigger" }
wasi-cloud = { path = "../wasi-cloud" }
serde = { version = "1.0", features = ["derive"] }
redis = { version = "0.21", features = ["tokio-comp", "tokio-native-tls-comp"] }
futures = "0.3"
